Bug 667612: Make addEventListener not throw if passed a null listener. r=smaug a=jonath